crates/reinhardt-core/macros/tests/ui/newtype/fail/delegatable_assoc_const.stderr
error: #[delegatable] cannot forward traits with required associated const items; wrap `Bounded` manually or provide a default value
 --> tests/ui/newtype/fail/delegatable_assoc_const.rs:8:8
  |
8 |     const MAX: usize;
  |           ^^^
